generated/checkers/gen/AllGen-UAF-67801fa67b94ebd0e4da7a77ac2d9f321b75fbe0/build_logs/syntax-repair-03/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘const clang::ento::MemRegion* {anonymous}::SAGenTestChecker::getRootAlias(const clang::ento::MemRegion*, clang::ento::ProgramStateRef) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:88:49: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type’ {aka ‘const clang::ento::MemRegion* const*’} to ‘const clang::ento::MemRegion*’ in initialization
   88 |     const MemRegion *Next = State->get<AliasMap>(Cur);
      |                             ~~~~~~~~~~~~~~~~~~~~^~~~~
      |                                                 |
      |                                                 clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::ento::MemRegion*> >::lookup_type {aka const clang::ento::MemRegion* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:209:54: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  209 |     const Stmt *PubStmt = State->get<PublishedObjMap>(MR);
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
      |                                                      |
      |                                                      clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:275:52: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  275 |   const Stmt *PubStmt = State->get<PublishedObjMap>(BaseObj);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~
      |                                                    |
      |                                                    clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
